@@ -14,6 +14,13 @@ ufloat1_SOURCES =	ufloat1.cc
 ullfp1_SOURCES =	ullfp1.cc
 ullfptab1_SOURCES =	ullfptab1.cc
 
+singleton1_DEPENDENCIES = 	config.h
+singleton2_DEPENDENCIES = 	config.h
+udouble1_DEPENDENCIES = 	config.h
+ufloat1_DEPENDENCIES = 		config.h
+ullfp1_DEPENDENCIES = 		config.h
+ullfptab1_DEPENDENCIES = 	config.h
+
 # If your test programs includes header from the source tree:
 AM_CPPFLAGS =		-I $(top_srcdir)		\
 			-I $(top_srcdir)/src		\
@@ -33,7 +40,7 @@ TESTS =							\
 config.h: $(top_srcdir)/src/config.h
 	sed  -e '/URBI_UFLOAT/d' $< > $@
 
-$(TESTS): config.h
+$(TESTS):
 	for i in $(TESTS); do \
           $(LN_S) -f $(top_srcdir)/build-aux/test.sh $$i || exit 1; \
         done
